//
// Created by sebastian on 04.08.23.
//

#ifndef JAREP_COMPONENTMANAGER_HPP
#define JAREP_COMPONENTMANAGER_HPP


class ComponentManager {

    public:
        ComponentManager() = default;
        ~ComponentManager() = default;
};


#endif //JAREP_COMPONENTMANAGER_HPP
